# fastapi-file-upload-example

./: README.md  pyproject.toml
src/: main.py
uploads/: example.txt
